Fixes "main" z-index.

--- a/src/styles/global/sections.css
+++ b/src/styles/global/sections.css
@@ -1,3 +1,8 @@
+[role='main'] {
+  position: relative;
+  z-index: 0;
+}
+
 .page-section {
   padding-top: 2rem;
   padding-bottom: 2rem;
